--- a/AI-ML/Assignment-4/Assignment(30-05-2020).ipynb
+++ b/AI-ML/Assignment-4/Assignment(30-05-2020).ipynb
@@ -66,16 +66,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is an interpreted, high-level, general-purpose programming language. \n",
+      "\n",
+      "Created by Guido van Rossum and first released in 1991, Python's design philosophy emphasizes \n",
+      "\n",
+      "code readability with its notable use of significant whitespace. Its language constructs and \n",
+      "\n",
+      "object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "f=open(\"sample.txt\",\"r\")\n",
     "f1=open(\"sample1.txt\",\"w\")\n",
     "for i in f:\n",
     "    f1.write(i)\n",
     "f2=open(\"sample1.txt\",\"r\")\n",
-    "for i in f2\n"
+    "for i in f2:\n",
+    "    print(i)\n"
    ]
   },
   {
@@ -89,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,12 +133,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.rename(\"sample.txt\",\"sam.txt\")\n",
+    "os.rename(\"sample.txt\",\"sam.txt\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 2] The system cannot find the file specified: 'sam.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-c7293cea8506>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"sam.txt\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'sam.txt'"
+     ]
+    }
+   ],
+   "source": [
     "os.remove(\"sam.txt\")"
    ]
   },
@@ -145,43 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "f=open(\"Folder-python/f.txt\",\"w\")\n",
-    "f1=open(\"Folder-python/f1.txt\",\"w\")\n",
-    "f2=open(\"Folder-python/f2.txt\",\"w\")\n",
-    "f3=open(\"Folder-python/f3.txt\",\"w\")\n",
-    "f4=open(\"Folder-python/f4.txt\",\"w\")\n",
-    "f.write('''Apple is one of the most common fruits consumed all around the world. It has a sweet taste,though it can get a little tangy if unripe, and has a long shelf life. It's dietary fibre and Vitamin C content makes it a potent food against many diseases including cancer. Usually red and green in colour, there is a golden variant too. In India, apple is mainly grown in the hilly areas of Himachal and Kashmir. It is grown in other areas too, but the yeild is insignificant.Apple is a winter fruit, but is available any''')\n",
-    "f1.write(''' \n",
-    "Mango is the national fruit of India.\n",
-    "Mango is the king of fruits.\n",
-    "It is a very sweet and delicious fruit.\n",
-    "There are more than 100 varieties of mangoes in our country India.\n",
-    "Summer is the season when Indians wait for the king of fruits.\n",
-    "Mango juice is the world’s favourite juice.\n",
-    "Mango is rich in vitamins A, C, and D. These vitamins help prevent diseases.\n",
-    "Mango is a bodybuilding fruit. Pickles and jams are also made from mangoes.\n",
-    "Children also like to eat mangoes.\n",
-    "We should always eat sweet mangoes.\n",
-    "''')\n",
-    "f2.write('''Watermelon (Citrullus lanatus) is a plant species in the family Cucurbitaceae, a vine-like flowering plant originally domesticated in West Africa. It is a highly cultivated fruit worldwide, having more than 1000 varieties.\n",
-    "Watermelon is a scrambling and trailing vine in the flowering plant family Cucurbitaceae. There is evidence from seeds in Pharaoh tombs of watermelon cultivation in Ancient Egypt. Watermelon is grown in favorable climates from tropical to temperate regions worldwide for its large edible fruit''')\n",
-    "f3.write('''\n",
-    "An orange is a type of citrus fruit that people often eat. Oranges are a very good source of vitamin C.[1] Orange juice is an important part of many people's breakfast. The \"sweet orange\", which is the kind that are most often eaten today, grew first in South and East Asia but now grows in lots of parts of the world.\n",
-    "Oranges are round orange-coloured fruit that grow on a tree which can reach 10 metres (33 ft) high. Orange trees have dark green shiny leaves and small white flowers with five petals. \n",
-    "\n",
-    "\n",
-    "''')\n",
-    "f4.write('''The fruit is typically in season in the Northern Hemisphere from September to February,[3] and in the Southern Hemisphere from March to May. As intact sarcotestas or juice, pomegranates are used in baking, cooking, juice blends, meal garnishes, smoothies, and alcoholic beverages, such as cocktails and wine.Today, it is widely cultivated throughout the Middle East and Caucasus region, north and tropical Africa,the Indian subcontinent, Central Asia, the drier parts of southeast Asia, and parts of the Mediterranean''')\n",
-    "f.close()\n",
-    "f1.close()\n",
-    "f2.close()\n",
-    "f3.close()\n",
-    "f4.close()"
+    "os.mkdir(\"Folder-python\")\n",
+    "for i in range(0,5):\n",
+    "    f=open(\"Folder-python/f\"+str(i)+\".txt\",\"a\")\n",
+    "    for j in range(512):\n",
+    "        f.write(str(i)+str(j)+\" \")\n",
+    "    f.close()"
    ]
   },
   {
