--- a/AI-ML/Assignment-4/Assignment(30-05-2020).ipynb
+++ b/AI-ML/Assignment-4/Assignment(30-05-2020).ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
     "for i in range(0,5):\n",
     "    f=open(\"Folder-python/f\"+str(i)+\".txt\",\"a\")\n",
     "    for j in range(512):\n",
-    "        f.write(str(i)+str(j)+\" \")\n",
+    "        f.write(chr(i+97))\n",
     "    f.close()"
    ]
   },
