--- a/AI-ML/Assignment-5/Assignment(01-06-2020).ipynb
+++ b/AI-ML/Assignment-5/Assignment(01-06-2020).ipynb
@@ -16,28 +16,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "averagesandeep11\\\n",
+      "uglysiva5@\n",
       "want another password ?yes\n",
-      "lowakhilesh32>\n",
+      "uglysai90=\n",
       "want another password ?yes\n",
-      "bigraju59`\n",
+      "attractiveraju100\\\n",
       "want another password ?yes\n",
-      "smallpriya95?\n",
+      "tallsandeep7`\n",
       "want another password ?yes\n",
-      "lowraju90-\n",
+      "goodpremanth96[\n",
       "want another password ?yes\n",
-      "highnikhil94.\n",
+      "tallhemanth63?\n",
       "want another password ?yes\n",
-      "averageraju39}\n",
+      "lowsrinu93-\n",
+      "want another password ?yess\n",
+      "fitdurga31;\n",
+      "want another password ?yes\n",
+      "lowanjali34&\n",
+      "want another password ?yes\n",
+      "greathemanth45*\n",
       "want another password ?no\n",
-      "['averagesandeep11\\\\', 'lowakhilesh32>', 'bigraju59`', 'smallpriya95?', 'lowraju90-', 'highnikhil94.', 'averageraju39}']\n"
+      "['uglysiva5@', 'uglysai90=', 'attractiveraju100\\\\', 'tallsandeep7`', 'goodpremanth96[', 'tallhemanth63?', 'lowsrinu93-', 'fitdurga31;', 'lowanjali34&', 'greathemanth45*']\n"
      ]
     }
    ],
