--- a/AI-ML/Assignment-6/Assignment(02-06-2020).ipynb
+++ b/AI-ML/Assignment-6/Assignment(02-06-2020).ipynb
@@ -20,28 +20,37 @@
      "text": [
       "['?', '?', '?', '?', '?']\n",
       "lives left 9\n",
-      "enter the word or letters\n",
-      "['s', '?', '?', '?', '?']\n",
-      "lives left 9\n",
       "enter the word or lettera\n",
-      "['s', '?', '?', '?', '?']\n",
+      "['?', '?', '?', '?', '?']\n",
       "lives left 8\n",
-      "enter the word or letters\n",
-      "['s', '?', '?', '?', '?']\n",
-      "lives left 7\n",
-      "enter the word or letterd\n",
-      "['s', '?', '?', '?', '?']\n",
-      "lives left 6\n",
-      "enter the word or lettert\n",
-      "['s', '?', '?', '?', '?']\n",
-      "lives left 5\n",
       "enter the word or letterr\n",
-      "['s', '?', '?', '?', 'r']\n",
+      "['?', '?', '?', '?', '?']\n",
+      "lives left 7\n",
+      "enter the word or letterl\n",
+      "['?', '?', '?', '?', '?']\n",
+      "lives left 6\n",
+      "enter the word or letteri\n",
+      "['i', '?', '?', '?', '?']\n",
+      "lives left 6\n",
+      "enter the word or letteri\n",
+      "['i', '?', '?', '?', '?']\n",
       "lives left 5\n",
-      "enter the word or lettersuper\n",
+      "enter the word or letteri\n",
+      "['i', '?', '?', '?', '?']\n",
+      "lives left 4\n",
+      "enter the word or letteri\n",
+      "['i', '?', '?', '?', '?']\n",
+      "lives left 3\n",
+      "enter the word or letteri\n",
+      "['i', '?', '?', '?', '?']\n",
+      "lives left 2\n",
+      "enter the word or letteri\n",
+      "['i', '?', '?', '?', '?']\n",
+      "lives left 1\n",
+      "enter the word or letterinbox\n",
       "You won!\n",
-      "['s', 'u', 'p', 'e', 'r']\n",
-      "the secret word is super\n"
+      "['i', 'n', 'b', 'o', 'x']\n",
+      "the secret word is inbox\n"
      ]
     }
    ],
