--- a/AI-ML/Assignment-7/Assignment(03-06-2020).ipynb
+++ b/AI-ML/Assignment-7/Assignment(03-06-2020).ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -220,8 +220,8 @@
      "output_type": "stream",
      "text": [
       "enter the list11 2 1\n",
-      "enter the list22 1 1\n",
-      "True\n"
+      "enter the list21 2 2\n",
+      "False\n"
      ]
     }
    ],
