--- a/AI-ML/Assignment-10/Assignment(06-06-2020).ipynb
+++ b/AI-ML/Assignment-10/Assignment(06-06-2020).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[1000 rows x 10 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "[1000 rows x 9 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -620,18 +620,18 @@
        "6        24  furniture/equipment  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(n=7)# to get top 7 rows"
+    "df.head(7)# to get top 7 rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -719,13 +719,13 @@
        "999        45       car  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.tail(n=3)# to get last 3 rows"
+    "df.tail(3)# to get last 3 rows"
    ]
   },
   {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
        "max      75.000000     3.000000   18424.000000    72.000000"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "freq     690     713             603              274     337"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
        "2        12  education  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
        "[1000 rows x 4 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "5        36            education  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
        "Name: Age, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
