--- a/AI-ML/Assignment-27/Assignment(27-06-2020).ipynb
+++ b/AI-ML/Assignment-27/Assignment(27-06-2020).ipynb
@@ -1366,7 +1366,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f7fa3a43c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a495c1b948>"
       ]
      },
      "execution_count": 22,
@@ -1398,7 +1398,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f7fa7e18c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a496046f88>"
       ]
      },
      "execution_count": 23,
@@ -1471,18 +1471,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true_positive = 315\n",
+      "true_negative = 315\n",
       "false_positive = 170\n",
       "true_negative = 108\n",
-      "false_negative = 345\n"
+      "false_positive = 345\n"
      ]
     }
    ],
    "source": [
-    "print('true_positive =',conf[0][0])\n",
+    "print('true_negative =',conf[0][0])\n",
     "print('false_positive =',conf[0][1])\n",
     "print('true_negative =',conf[1][0])\n",
-    "print('false_negative =',conf[1][1])"
+    "print('false_positive =',conf[1][1])"
    ]
   },
   {
@@ -1714,10 +1714,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_positive =conf[0][0]\n",
+    "true_negative =conf[0][0]\n",
     "false_positive =conf[0][1]\n",
     "false_negative =conf[1][0]\n",
-    "true_negative =conf[1][1]"
+    "true_positive =conf[1][1]"
    ]
   },
   {
@@ -1728,7 +1728,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6494845360824743"
+       "0.6699029126213593"
       ]
      },
      "execution_count": 32,
@@ -1772,7 +1772,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7446808510638298"
+       "0.7615894039735099"
       ]
      },
      "execution_count": 34,
@@ -1917,7 +1917,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f7fa8b1088>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a496110908>"
       ]
      },
      "execution_count": 40,
@@ -1949,7 +1949,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f7fa9458c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4961b4d88>"
       ]
      },
      "execution_count": 41,
@@ -1982,18 +1982,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true_positive = 119\n",
+      "true_negative = 119\n",
       "false_positive = 81\n",
       "true_negative = 39\n",
-      "false_negative = 163\n"
+      "false_positive = 163\n"
      ]
     }
    ],
    "source": [
-    "print('true_positive =',conf[0][0])\n",
+    "print('true_negative =',conf[0][0])\n",
     "print('false_positive =',conf[0][1])\n",
     "print('true_negative =',conf[1][0])\n",
-    "print('false_negative =',conf[1][1])"
+    "print('false_positive =',conf[1][1])"
    ]
   },
   {
@@ -2002,10 +2002,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_positive =conf[0][0]\n",
+    "true_negative =conf[0][0]\n",
     "false_positive =conf[0][1]\n",
     "false_negative =conf[1][0]\n",
-    "true_negative =conf[1][1]"
+    "true_positive =conf[1][1]"
    ]
   },
   {
@@ -2057,7 +2057,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7531645569620253"
+       "0.806930693069307"
       ]
      },
      "execution_count": 46,
@@ -2122,7 +2122,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f7fa811988>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a49622a6c8>"
       ]
      },
      "execution_count": 49,
@@ -2200,7 +2200,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f7faa62e48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4962ad148>"
       ]
      },
      "execution_count": 52,
@@ -2239,7 +2239,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f7faad2688>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a496322d88>"
       ]
      },
      "execution_count": 53,
@@ -2393,7 +2393,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f7faae3408>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a495bcbcc8>"
       ]
      },
      "execution_count": 55,
